--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,7 +469,7 @@ li {
 
 .contact-sec {
     color: var(--color-light);
-    background-image: url("/assets/images/bg4.jpg");
+    background-image: url("../assets/images/bg4.jpg");
     background-position: center;
     background-size: 100%;
     background-repeat: no-repeat;
